language-server/test runs with truffle-compiler